# fastapi-rbac

./: .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PROJECT.md  README.md  SECURITY.md  docker-compose.yml  final_cleanup_deployment.py  mkdocs.yml  pyproject.toml  remove_header.py  remove_text_lines.py
.github/workflows/: docs.yml  publish.yml  test.yml
rbac/core/: constants.py  database.py  exceptions.py  models.py
rbac/services/: permission_service.py
src/docs/: api-reference.md  caching.md  index.md  integration.md  multi-tenancy.md
src/examples/: audit_example.py  basic_app.py  integration_example.py  redis_example.py
src/rbac/: __init__.py  py.typed
src/rbac/cache/: __init__.py  redis_client.py
src/rbac/core/: __init__.py  database.py
src/rbac/decorators/: rbac.py
src/rbac/dependencies/: __init__.py  auth.py
src/rbac/integration/: __init__.py  base.py  keycloak_provider.py  ldap_provider.py  sync_service.py
src/rbac/middleware/: audit.py
src/rbac/services/: __init__.py  assignment_service.py  audit_service.py  permission_service.py  role_service.py
src/tests/: conftest.py  test_assignment_service.py  test_audit_service.py  test_integration.py  test_permission_service.py  test_redis_cache.py  test_role_service.py
